<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6B76FF"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".Settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="133dp"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <Button
                android:id="@+id/imageView5"
                android:layout_width="64dp"
                android:layout_height="24dp"
                android:background="null"
                app:icon="@drawable/arrowback"
                app:iconGravity="end"
                app:iconPadding="0dp"
                app:iconSize="16dp"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="13dp"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="284dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="@string/settings"
                android:textColor="@color/white"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="0dp"
                tools:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="24dp"
            android:background="@drawable/rounded_bg_light"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="0dp"
                android:layout_height="16dp"
                android:layout_weight="1"
                android:importantForAccessibility="no"
                android:src="@drawable/search" />

            <EditText
                android:id="@+id/editTextText2"
                android:layout_width="280dp"
                android:layout_height="match_parent"
                android:background="null"
                android:ems="10"
                android:fontFamily="monospace"
                android:hint="@string/search"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="386dp"
        android:layout_height="56dp"
        android:layout_margin="@dimen/cardview_default_elevation"
        android:background="@drawable/rounded_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/profile_icon"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:importantForAccessibility="no"
            tools:src="@drawable/user" />

        <TextView
            android:id="@+id/profile_title"
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:gravity="center|start"
            android:text="@string/profile"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/profile_desc"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:gravity="center|end"
            android:text="Ubah / edit profile "
            android:textColor="@color/material_dynamic_neutral60"
            android:textSize="11sp"
            tools:ignore="HardcodedText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="386dp"
        android:layout_height="56dp"
        android:layout_margin="@dimen/cardview_default_elevation"
        android:background="@drawable/rounded_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/notif_icon"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:importantForAccessibility="no"
            tools:src="@drawable/notification" />

        <TextView
            android:id="@+id/notif_title"
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:gravity="center|start"
            android:text="@string/notification"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/notif_desc"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:gravity="center|end"
            android:text="Atur notifikasi "
            android:textColor="@color/material_dynamic_neutral60"
            android:textSize="11sp"
            tools:ignore="HardcodedText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="386dp"
        android:layout_height="56dp"
        android:layout_margin="@dimen/cardview_default_elevation"
        android:background="@drawable/rounded_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/history_icon"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:importantForAccessibility="no"
            tools:src="@drawable/history" />

        <TextView
            android:id="@+id/history_title"
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:gravity="center|start"
            android:text="@string/history"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/history_desc"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:gravity="center|end"
            android:text="Lihat riwayat pembayaran"
            android:textColor="@color/material_dynamic_neutral60"
            android:textSize="11sp"
            tools:ignore="HardcodedText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="386dp"
        android:layout_height="56dp"
        android:layout_margin="@dimen/cardview_default_elevation"
        android:background="@drawable/rounded_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/privacy_icon"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:importantForAccessibility="no"
            tools:src="@drawable/locked" />

        <TextView
            android:id="@+id/privacy_title"
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:gravity="center|start"
            android:text="@string/privacy"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/privacy_desc"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:gravity="center|end"
            android:text="Atur keamanan"
            android:textColor="@color/material_dynamic_neutral60"
            android:textSize="11sp"
            tools:ignore="HardcodedText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="386dp"
        android:layout_height="56dp"
        android:layout_margin="@dimen/cardview_default_elevation"
        android:background="@drawable/rounded_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/device_icon"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:importantForAccessibility="no"
            tools:src="@drawable/responsive" />

        <TextView
            android:id="@+id/device_title"
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:gravity="center|start"
            android:text="@string/devices"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/device_desc"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:gravity="center|end"
            android:text="Atur periziinan perangkat"
            android:textColor="@color/material_dynamic_neutral60"
            android:textSize="11sp"
            tools:ignore="HardcodedText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="386dp"
        android:layout_height="56dp"
        android:layout_margin="@dimen/cardview_default_elevation"
        android:background="@drawable/rounded_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/service_icon"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:importantForAccessibility="no"
            tools:src="@drawable/service" />

        <TextView
            android:id="@+id/service_title"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:gravity="center|start"
            android:text="@string/customer_service"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/service_desc"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:gravity="center|end"
            android:text="Bantuan"
            android:textColor="@color/material_dynamic_neutral60"
            android:textSize="11sp"
            tools:ignore="HardcodedText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="386dp"
        android:layout_height="56dp"
        android:layout_margin="@dimen/cardview_default_elevation"
        android:background="@drawable/rounded_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/about_icon"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:importantForAccessibility="no"
            tools:src="@drawable/question" />

        <TextView
            android:id="@+id/about_title"
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:gravity="center|start"
            android:text="@string/about"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/about_desc"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:gravity="center|end"
            android:textColor="@color/black"
            android:textSize="11sp" />

    </LinearLayout>

</LinearLayout>